[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/weapons/bullets/BasicBullet.gd" type="Script" id=1]

[node name="BasicBullet" type="Area2D"]
collision_layer = 0
collision_mask = 0
monitorable = false
script = ExtResource( 1 )

[node name="Pivot" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[connection signal="area_entered" from="." to="." method="_on_BasicBullet_area_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
